--- a/front/public/index.html
+++ b/front/public/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <title>
+     PSA
+  </title>
   <head>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <meta charset="utf-8">
+      <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
     </head>
   </head>
   <body>
