--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,8 +6,9 @@
   <head>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">      
       <meta charset="utf-8">
-      <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
     </head>
   </head>
   <body>
