--- a/front/public/index.html
+++ b/front/public/index.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
       <link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.16.1/css/semantic.min.css'>
       <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.min.css'>
+      <link rel="stylesheet" type="text/css" href="../src/assets/css/main.css"/>
     </head>
   </head>
   <body>
