--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="../src/assets/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/pastine/7509-TP/master/front/src/assets/css/main.css"/>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
